--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -1,38 +1,42 @@
 @font-face {
     font-family: 'EB Garamond';
-    src: url(./ebgaramondmedium.ttf) format('ttf'),
+    src: url(./ebgaramondmedium.woff2) format(woff2),
          url(./ebgaramondmedium.woff) format('woff'),
-         url(./ebgaramondmedium.woff2) format(woff2);
+         url(./ebgaramondmedium.ttf) format('ttf');
     font-weight: 500;
+    font-style: normal;
+    font-display: swap;
+
 }
 
 @font-face {
     font-family: 'EB Garamond';
-    src: url(./ebgaramondregular.ttf) format('ttf'),
+    src: url(./ebgaramondregular.woff2) format(woff2),
          url(./ebgaramondregular.woff) format('woff'),
-         url(./ebgaramondregular.woff2) format(woff2);
+         url(./ebgaramondregular.ttf) format('ttf');
     font-weight: 400;
+    font-style: normal;
+    font-display: swap;
 }
 
 @font-face {
     font-family: 'Inter';
-    src: url(./interregular.ttf) format('ttf'),
+    src: url(./interregular.woff2) format(woff2),
          url(./interregular.woff) format('woff'),
-         url(./interregular.woff2) format(woff2);
+         url(./interregular.ttf) format('ttf');
     font-weight: 400;
+    font-style: normal;
+    font-display: swap;
 }
 
 @font-face {
     font-family: 'Inter';
-    src: url(./interbold.ttf) format('ttf'),
+    src: url(./interbold.woff2) format(woff2),
          url(./interbold.woff) format('woff'),
-         url(./interbold.woff2) format(woff2);
+         url(./interbold.ttf) format('ttf');
     font-weight: 700;
-}
-
-div {
-    font-size: 26px;
-    line-height: 15px;
+    font-style: normal;
+    font-display: swap;
 }
 
 
