--- a/styles/style.css
+++ b/styles/style.css
@@ -21,6 +21,11 @@ blockquote {
     padding: 0;
 }
 
+div {
+    font-size: 26px;
+    line-height: 15px;
+}
+
 body {
     background: #1e1e1e;
     margin: 0;
@@ -225,11 +230,11 @@ body {
 
 /* How-to styles start */
 
-.how__to {
+.how-to {
     padding: 40px 20px 27px;
 }
 
-.how-to__content-section__introduction {
+.how-to-content-section__introduction {
     font-family: 'Inter';
     font-style: normal;
     font-weight: 400;
@@ -237,6 +242,7 @@ body {
     line-height: 27px;
     color: #f5f5f5;
     margin-bottom: 32px;
+    list-style: none;
 }
 
 .card {
